--- a/packer/templates/user-data.j2
+++ b/packer/templates/user-data.j2
@@ -18,7 +18,7 @@ autoinstall:
     install: false
   identity:
     password: {{ mdpCryptPKR }}
-    realname: admin
+    realname: {{ userRealNamePKR }}
     username: {{ userPKR }}
     hostname: {{ hostnamePKR }}
   kernel:
