--- a/packer/templates/packerVMubuntu.pkr.hcl.j2
+++ b/packer/templates/packerVMubuntu.pkr.hcl.j2
@@ -41,7 +41,7 @@ source "vsphere-iso" "vm-packer" {
   
   boot_command = [
     "<wait10s>c",
-    "linux /casper/vmlinuz quiet ip={{ ipPKR }}::{{ gwPKR }}:{{ masPKR }}::::{{ dnsPKR }}  autoinstall ds=nocloud-net\\;s=http://192.168.220.7/ ---<wait>",
+    "linux /casper/vmlinuz quiet ip={{ ipPKR }}::{{ gwPKR }}:{{ maskPKR }}::::{{ dnsPKR }}  autoinstall ds=nocloud-net\\;s=http://192.168.220.7/ ---<wait>",
     "<enter><wait10s>",
     "initrd /casper/initrd",
     "<enter><wait15s>",
