--- a/packer/templates/packerVMubuntu.pkr.hcl.j2
+++ b/packer/templates/packerVMubuntu.pkr.hcl.j2
@@ -37,7 +37,7 @@ source "vsphere-iso" "vm-packer" {
 
   # ISO configuration
   iso_checksum = "{{ iso_checksumPKR }}"
-  iso_url      = "{{ iso_url_PKR }}
+  iso_url      = "{{ iso_url_PKR }}"
   
   boot_command = [
     "<wait10s>c",
