--- a/packer/templates/packerVMubuntu.pkr.hcl.j2
+++ b/packer/templates/packerVMubuntu.pkr.hcl.j2
@@ -67,7 +67,7 @@ build {
     # Add additional provisioning scripts here
   # ...
   provisioner "shell" {
-    script       = "{{ scriptPKR1 }}
+    script       = "{{ scriptPKR1 }}"
     pause_before = "10s"
   }
 }
