--- a/packer/templates/packerVMubuntu.pkr.hcl.j2
+++ b/packer/templates/packerVMubuntu.pkr.hcl.j2
@@ -25,7 +25,7 @@ source "vsphere-iso" "vm-packer" {
   # Network settings
   network_adapters {
     network = "{{ netPKR }}"
-    network_card = "{{ netPKR }}"
+    network_card = "{{ netCardPKR }}"
   }
   
  # Hard disk settings 
