--- a/packer/templates/packerVMdebian.pkr.hcl.j2
+++ b/packer/templates/packerVMdebian.pkr.hcl.j2
@@ -66,8 +66,8 @@ build {
 
     # Add additional provisioning scripts here
   # ...
-  # provisioner "shell" {
-  #   script       = "{{ scriptPKR1 }}"
-  #   pause_before = "10s"
-  # }
+  provisioner "shell" {
+    script       = "{{ scriptPKR1 }}"
+    pause_before = "10s"
+  }
 }
